[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/X.png" type="Texture" id=1]
[ext_resource path="res://Launcher.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/LTWoodchuck-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/TitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "LaunchGame"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "LoadGame"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("LaunchGame:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 371.539, 482.398 ), Vector2( 371.539, 617.398 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProgressBar:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 526 ), Vector2( 0, 488 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ProgressBar:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 100.0 ]
}

[sub_resource type="Animation" id=3]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TemporaryPlayer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 4, 4.4, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -71.317, 432.375 ), Vector2( 1045, 432 ), Vector2( 1124.87, 682.737 ), Vector2( -132.485, 697.145 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 114
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "loading_lol"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Launcher" type="Node2D"]
script = ExtResource( 2 )

[node name="GetVersion" type="HTTPRequest" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LaunchGame = SubResource( 1 )
anims/LoadGame = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512.414, 300.112 )
current = true

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.490196, 0.403922, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarThingy" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BarThingy"]
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 27.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BarThingy"]
margin_left = 31.7368
margin_top = 5.0
margin_right = 649.737
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aleatoriu Launcher"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="BarThingy"]
margin_left = 999.769
margin_top = 3.31158
margin_right = 1030.77
margin_bottom = 33.3116
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="BarThingy"]
position = Vector2( 16.2892, 12.7136 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="LilRunningGuy" type="Node2D" parent="."]

[node name="TemporaryPlayer" type="ColorRect" parent="LilRunningGuy"]
margin_left = -94.6191
margin_top = 533.24
margin_right = -27.6192
margin_bottom = 627.226
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LilRunningGuy"]
autoplay = "MovingLoop"
anims/MovingLoop = SubResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_top = 526.0
margin_right = 1026.0
margin_bottom = 564.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBar" type="ColorRect" parent="."]
margin_top = 526.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.305882, 0.227451, 0.623529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaunchGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 371.539
margin_top = 482.398
margin_right = 653.539
margin_bottom = 572.398
custom_fonts/font = ExtResource( 6 )
keep_pressed_outside = true
text = "Launch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LaunchGame"]
margin_left = 94.768
margin_top = 60.3069
margin_right = 187.768
margin_bottom = 74.3069
text = "Release v0.1.0"

[node name="Title" type="Node2D" parent="."]

[node name="Back" type="Label" parent="Title"]
margin_left = 245.208
margin_top = 71.0
margin_right = 769.208
margin_bottom = 208.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.247059, 0.145098, 0.52549, 1 )
text = "Aleatoriu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="Label" parent="Title"]
margin_left = 238.534
margin_top = 58.9865
margin_right = 762.534
margin_bottom = 195.986
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aleatoriu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LauncherVersion" type="Label" parent="Title"]
margin_left = 245.0
margin_top = 190.0
margin_right = 761.0
margin_bottom = 204.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Launcher v1.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Loading"]
margin_left = 289.268
margin_top = 232.087
margin_right = 722.268
margin_bottom = 369.087
custom_fonts/font = ExtResource( 5 )
text = "Loading"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading"]
anims/loading_lol = SubResource( 5 )

[connection signal="request_completed" from="GetVersion" to="." method="_on_GetVersion_request_completed"]
[connection signal="pressed" from="BarThingy/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="pressed" from="LaunchGame" to="." method="_on_LaunchGame_pressed"]
